--- a/frontend/weekly.html
+++ b/frontend/weekly.html
@@ -106,23 +106,23 @@
           </div>
 
           <!-- Past Reflections -->
-          <div class="content-card reflections-card">
+          <div class="content-card notes-card full-width">
             <div class="card-header">
               <div class="card-title">
                 <div class="title-icon">
                   <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M9 12l2 2 4-4"/>
-                    <path d="M21 12c-1 0-2-1-2-2s1-2 2-2 2 1 2 2-1 2-2 2z"/>
-                    <path d="M3 12c1 0 2-1 2-2s-1-2-2-2-2 1-2 2 1 2 2 2z"/>
-                    <path d="M12 3c0 1-1 2-2 2s-2-1-2-2 1-2 2-2 2 1 2 2z"/>
-                    <path d="M12 21c0-1 1-2 2-2s2 1 2 2-1 2-2 2-2-1-2-2z"/>
+                    <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                    <polyline points="14,2 14,8 20,8"/>
+                    <line x1="16" y1="13" x2="8" y2="13"/>
+                    <line x1="16" y1="17" x2="8" y2="17"/>
+                    <polyline points="10,9 9,9 8,9"/>
                   </svg>
                 </div>
                 <h3>Past Reflections</h3>
               </div>
             </div>
             <div class="card-content">
-              <div id="weekly-reflection-entries" class="reflections-list">
+              <div id="weekly-reflection-entries" class="log-entries-container">
                 <!-- Past reflections will load here -->
               </div>
             </div>
