--- a/frontend/weekly.html
+++ b/frontend/weekly.html
@@ -183,5 +183,13 @@
     <script src="nav.js"></script>
     <script src="weekly.js"></script>
   </div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <span id="eat">Eat</span>
+    <span id="sleep">Sleep</span>
+    <span id="code">Code</span>
+    <span id="repeat">Repeat</span>
+  </footer>
 </body>
 </html>
