--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -77,6 +77,8 @@
           <input type="text" id="search-input" placeholder="Search notes, tags, or collections..." class="search-input"/>
           <button id="clear-search" class="clear-search-btn hidden">&times;</button>
         </div>
+        <!-- Test button for debugging -->
+        <button onclick="testModal()" style="background: red; color: white; padding: 10px; margin: 10px; border: none; border-radius: 5px;">TEST MODAL</button>
       </div>
 
       <!-- Notes Content -->
