Update notes.html to adjust button margin and change text from "Weekly" to "Week" for improved layout and clarity.

--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -265,7 +265,7 @@
           </svg>
           <span class="text-xs truncate">Cal</span>
         </a>
-        <button id="fab" class="bg-[#b91c1c] w-10 h-10 rounded-full text-white flex items-center justify-center shadow-xl transform -translate-y-4 hover:scale-105 transition z-50">+</button>
+        <button id="fab" class="bg-[#b91c1c] w-10 h-10 rounded-full text-white flex items-center justify-center shadow-xl transform -translate-y-4 hover:scale-105 transition z-50 mx-1">+</button>
         <a href="daily.html" class="flex flex-col items-center text-xs hover:text-[#b91c1c] min-w-0 flex-1">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -276,7 +276,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18M3 17h18" />
           </svg>
-          <span class="text-xs truncate">Weekly</span>
+          <span class="text-xs truncate">Week</span>
         </a>
       </nav>
     </div>
