Update notes.css and notes.html to enhance mobile modal styles and button interactions. Add a gradient background to action icons, adjust modal dimensions for better responsiveness, and improve close button functionality with new hover effects. Change button classes for consistency in action styling.

--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -146,14 +146,14 @@
           <button class="desktop-drawer__close" onclick="document.getElementById('drawer').classList.add('hidden')">&times;</button>
         </div>
         <div class="desktop-drawer__actions">
-          <button class="desktop-action-btn note-action" onclick="document.getElementById('notePopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
+          <button class="desktop-action-btn notes-action" onclick="document.getElementById('notePopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
             <div class="action-icon">📝</div>
             <div class="action-text">
               <span class="action-title">Create Note</span>
               <span class="action-subtitle">Add a new note</span>
             </div>
           </button>
-          <button class="desktop-action-btn collection-action" onclick="document.getElementById('collectionPopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
+          <button class="desktop-action-btn notes-action" onclick="document.getElementById('collectionPopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
             <div class="action-icon">📁</div>
             <div class="action-text">
               <span class="action-title">New Collection</span>
