Refactor collections.js to create notes with collection names as notebooks, enhancing note organization. Update fetching logic to retrieve notes instead of collections, and implement grouping of notes by notebook. Modify collection card rendering and associated functions for improved clarity and functionality. Update notes.css for consistent styling across elements, and adjust notes.html to include collections and tags scripts for better integration.

--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -283,6 +283,8 @@
 
     <script src="nav.js"></script>
     <script src="notes.js"></script>
+    <script src="collections.js"></script>
+    <script src="tags.js"></script>
   </div>
 
   <!-- Footer -->
