--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -146,7 +146,7 @@
           <button class="desktop-drawer__close" onclick="document.getElementById('drawer').classList.add('hidden')">&times;</button>
         </div>
         <div class="desktop-drawer__actions">
-          <button class="desktop-action-btn" onclick="document.getElementById('notePopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
+          <button class="desktop-action-btn notes-action" onclick="document.getElementById('notePopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
             <div class="action-icon">📝</div>
             <div class="action-text">
               <span class="action-title">Create Note</span>
