--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -3,151 +3,180 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="tasks.css">
-        <script src="https://cdn.tailwindcss.com"></script>
-
-  <title>Document</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Tasks - Dashboard</title>
 </head>
 <body>
   <div class="page-content">
-<header class="head">
-  <div class="nav-container">
-    <div class="nav-left">
-      <img class="logo" src="logo.png" alt="">
-      <h2 class="nav-quote">Get this shit done.</h2>
+    <!-- Desktop Navigation -->
+    <header class="head">
+      <div class="nav-container">
+        <div class="nav-left">
+          <div class="logo">OBIZU</div>
+          <h2 class="nav-quote">Get this shit done.</h2>
+        </div>
+
+        <nav>
+          <ul class="main-nav">
+            <li><a href="index.html">Dashboard</a></li>
+            <li><a href="lessons.html">Lessons</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle">Daily ▾</a>
+              <ul class="dropdown-menu">
+                <li><a href="daily.html">Daily</a></li>
+                <li><a href="weekly.html">Weekly</a></li>
+              </ul>
+            </li>
+            <li><a href="goals.html">Goals</a></li>
+            <li><a href="notes.html">Notes</a></li>
+            <li><a href="tasks.html" class="active">Tasks</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- Modern Dashboard Content -->
+    <div class="modern-dashboard">
+      <!-- Dashboard Header -->
+      <div class="dashboard-header">
+        <div class="dashboard-header-content">
+          <div class="dashboard-title">
+            <div class="title-icon">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M9 11l3 3L22 4"/>
+                <path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"/>
+              </svg>
+            </div>
+            <div class="title-text">
+              <h1>Tasks</h1>
+              <p>Manage and complete your tasks</p>
+            </div>
+          </div>
+          <button class="action-btn" onclick="document.getElementById('drawer').classList.remove('hidden')">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M12 5v14M5 12h14"/>
+            </svg>
+            Quick Actions
+          </button>
+        </div>
+      </div>
+
+      <!-- Tasks Content -->
+      <div class="tasks-content">
+        <div class="tasks-grid" id="task-container">
+          <!-- Tasks will be loaded here -->
+        </div>
+      </div>
     </div>
 
-    <div class="nav-right">
-      <button class="hamburger" aria-label="Toggle menu">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
+    <!-- Desktop Quick Actions Drawer (hidden on mobile) -->
+    <div id="drawer" class="desktop-drawer hidden hidden md:block">
+      <div class="desktop-drawer__content">
+        <div class="desktop-drawer__header">
+          <h2 class="desktop-drawer__title">Quick Actions</h2>
+          <button class="desktop-drawer__close" onclick="document.getElementById('drawer').classList.add('hidden')">&times;</button>
+        </div>
+        <div class="desktop-drawer__actions">
+          <button class="desktop-action-btn task-action" onclick="document.getElementById('taskPopup').classList.remove('hidden'); document.getElementById('drawer').classList.add('hidden')">
+            <div class="action-icon">✓</div>
+            <div class="action-text">
+              <span class="action-title">Add Task</span>
+              <span class="action-subtitle">Create a new task</span>
+            </div>
+          </button>
+        </div>
+      </div>
+    </div>
 
-      <nav>
-        <ul class="main-nav">
-          <li><a href="index.html">Home</a></li>
-          
+    <!-- Mobile Quick Actions Drawer (hidden on desktop) -->
+    <div id="mobileDrawer" class="modal drawer-modal hidden block md:hidden">
+      <div class="drawer__content">
+        <button class="modal__close" onclick="document.getElementById('mobileDrawer').classList.add('hidden')">&times;</button>
+        <h2 class="modal__title card--tasks">Quick Actions</h2>
+        <ul class="drawer__links">
+          <li><button onclick="document.getElementById('taskPopup').classList.remove('hidden')">Add Task</button></li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Site Links Drawer -->
+    <div id="siteLinksDrawer" class="modal drawer-modal hidden">
+      <div class="drawer__content">
+        <button class="modal__close" onclick="document.getElementById('siteLinksDrawer').classList.add('hidden')">&times;</button>
+        <h2 class="modal__title">Site Links</h2>
+        <ul class="drawer__links">
+          <li><a href="index.html">Dashboard</a></li>
           <li><a href="lessons.html">Lessons</a></li>
-
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle">Daily ▾</a>
-
-            <!-- Desktop dropdown menu -->
-            <ul class="dropdown-menu">
-              <li><a href="daily.html">Daily</a></li>
-              <li><a href="weekly.html">Weekly</a></li>
-            </ul>
-          </li>
-
+          <li><a href="daily.html">Daily</a></li>
+          <li><a href="weekly.html">Weekly</a></li>
           <li><a href="goals.html">Goals</a></li>
           <li><a href="notes.html">Notes</a></li>
           <li><a href="tasks.html">Tasks</a></li>
           <li><a href="schedule.html">Schedule</a></li>
         </ul>
+      </div>
+    </div>
 
-        <!-- Mobile slide-in submenu -->
-        <ul class="submenu-panel" id="submenu">
-          <li><a href="daily.html">Daily</a></li>
-          <li><a href="weekly.html">Weekly</a></li>
-        </ul>
+    <!-- Add Task Popup -->
+    <div id="taskPopup" class="modal hidden">
+      <div class="modal__content">
+        <button class="modal__close" onclick="document.getElementById('taskPopup').classList.add('hidden')">&times;</button>
+        <h2 class="modal__title card--tasks">Add New Task</h2>
+        <form id="task-form" class="modal__form">
+          <input type="text" id="task-text" placeholder="Task title" required>
+          <input type="date" id="task-date" required>
+          <input type="time" id="task-time" required>
+          <textarea id="task-notes" placeholder="Task notes (optional)" rows="4"></textarea>
+          <button type="submit" class="modal__submit card--tasks">Add Task</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Mobile Navigation -->
+    <div class="block md:hidden">
+      <nav id="bottomNav" class="fixed bottom-0 left-0 w-full text-white rounded-t-2xl flex items-center justify-between px-6 py-4 shadow-inner z-40 transition-colors duration-300">
+        <a href="index.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7m-9 2v8m4-8v8m5 0h2a2 2 0 002-2v-5a2 2 0 00-2-2h-3.28" />
+          </svg>
+          Home
+        </a>
+        <a href="schedule.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 10h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+          </svg>
+          Calendar
+        </a>
+        <button id="fab" class="bg-[#b91c1c] w-14 h-14 rounded-full text-white flex items-center justify-center shadow-xl transform -translate-y-8 hover:scale-105 transition z-50 mx-1">+</button>
+        <a href="daily.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          Day
+        </a>
+        <a href="weekly.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18M3 17h18" />
+          </svg>
+          Week
+        </a>
       </nav>
     </div>
-  </div>
-</header>
-<!-- Task Form Popup Container -->
- <h2 class="text-xl font-bold text-white pt-0 mb-4">Tasks</h2>
-<div id="task-form-popup" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center z-50">
-  <form id="task-form" class="bg-white dark:bg-zinc-900 p-4 rounded-lg w-full max-w-md">
-    <label for="task-text">Task</label>
-    <input type="text" id="task-text" required>
 
-    <label for="task-date">Date</label>
-    <input type="date" id="task-date" required>
-
-    <label for="task-time">Time</label>
-    <input type="time" id="task-time" required>
-
-    <label for="task-notes">Task Notes</label>
-    <textarea id="task-notes" name="task-notes" rows="4" placeholder="Add extra details..."></textarea>
-
-    <button type="submit">Add Task</button>
-  </form>
-</div>
-
-  <div id="datetime-bar">
-    <p id="current-date"></p>
-    <p id="current-time"></p>
-  </div>
-  <div id="task-container" class="p-4"></div>
-
-  
-</div>
-</div>
-<footer class="footer">
-    <span>Eat</span>
-    <span>Sleep</span>
-    <span>Code</span>
-    <span>Repeat</span>
-  </footer>
-
-  <!-- Site Links Drawer -->
-<div id="siteLinksDrawer" class="pointer-events-none fixed bottom-[120px] left-1/2 transform -translate-x-[45%] opacity-0 scale-95 transition-all duration-300 w-40 bg-[#1a1a1a] text-white p-3 rounded-xl shadow-lg z-50">
-  <div class="flex flex-col space-y-3 text-sm">
-    <a href="index.html" class="hover:text-[#b91c1c]">Home</a>
-    <a href="schedule.html" class="hover:text-[#b91c1c]">Schedule</a>
-    <a href="daily.html" class="hover:text-[#b91c1c]">Daily</a>
-    <a href="weekly.html" class="hover:text-[#b91c1c]">Weekly</a>
-    <a href="goals.html" class="hover:text-[#b91c1c]">Goals</a>
-    <a href="tasks.html" class="hover:text-[#b91c1c]">Tasks</a>
-    <a href="lessons.html" class="hover:text-[#b91c1c]">Lessons</a>
-    <a href="notes.html" class="hover:text-[#b91c1c]">Notes</a>
-  </div>
-</div>
-
-
-  <!-- Bottom Nav (mobile only) -->
-  <div class="block md:hidden">
-    <nav id="bottomNav" style="background-color: #1a1a1a;" class="fixed bottom-0 left-0 w-full text-white rounded-t-2xl flex items-center justify-between px-6 py-4 shadow-inner z-40 transition-colors duration-300">
-      <a href="index.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7m-9 2v8m4-8v8m5 0h2a2 2 0 002-2v-5a2 2 0 00-2-2h-3.28" />
-        </svg>
-        Home
-      </a>
-      <a href="schedule.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 10h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
-        </svg>
-        Calendar
-      </a>
-      <button id="fab" class="bg-[#b91c1c] w-14 h-14 rounded-full text-white flex items-center justify-center shadow-xl transform -translate-y-8 hover:scale-105 transition z-50">+</button>
-      <a href="daily.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
-        </svg>
-        Daily
-      </a>
-      <a href="weekly.html" class="flex flex-col items-center text-sm hover:text-[#b91c1c]">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 7h18M3 12h18M3 17h18" />
-        </svg>
-        Weekly
-      </a>
-    </nav>
+    <!-- Footer -->
+    <footer class="footer">
+      <span>Eat</span>
+      <span>Sleep</span>
+      <span>Code</span>
+      <span>Repeat</span>
+    </footer>
   </div>
 
-  <button
-  id="add-task-desktop"
-  class="hidden md:flex items-center justify-center fixed bottom-[70px] right-6 bg-[#b91c1c] hover:bg-red-700 text-white w-12 h-12 rounded-full shadow-lg z-40">
-  +
-</button>
-
-
-  <script  type="module" src="script.js"></script>
+  <script src="script.js"></script>
   <script src="nav.js"></script>
 </body>
 </html>
