--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="tasks.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Tasks - Dashboard</title>
@@ -109,14 +108,14 @@
         <button class="modal__close" onclick="document.getElementById('siteLinksDrawer').classList.add('hidden')">&times;</button>
         <h2 class="modal__title card--tasks">Site Links</h2>
         <ul class="drawer__links">
-          <li><a href="index.html">Dashboard</a></li>
-          <li><a href="lessons.html">Lessons</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
           <li><a href="daily.html">Daily</a></li>
           <li><a href="weekly.html">Weekly</a></li>
           <li><a href="goals.html">Goals</a></li>
-          <li><a href="notes.html">Notes</a></li>
           <li><a href="tasks.html">Tasks</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="lessons.html">Lessons</a></li>
+          <li><a href="notes.html">Notes</a></li>
         </ul>
       </div>
     </div>
@@ -151,7 +150,7 @@
           </svg>
           <span class="text-xs truncate">Cal</span>
         </a>
-        <button id="fab" class="bg-[#b91c1c] w-10 h-10 rounded-full text-white flex items-center justify-center shadow-xl transform -translate-y-4 hover:scale-105 transition z-50 mx-1">+</button>
+        <button id="fab" class="bg-[#b91c1c] w-10 h-10 rounded-full text-white flex items-center justify-center shadow-xl transform -translate-y-4 hover:scale-105 transition z-50">+</button>
         <a href="daily.html" class="flex flex-col items-center text-xs hover:text-[#b91c1c] min-w-0 flex-1">
           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 mb-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
@@ -167,16 +166,16 @@
       </nav>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <span>Eat</span>
-      <span>Sleep</span>
-      <span>Code</span>
-      <span>Repeat</span>
-    </footer>
+    <script src="nav.js"></script>
+    <script src="script.js"></script>
   </div>
 
-  <script src="script.js"></script>
-  <script src="nav.js"></script>
+  <!-- Footer -->
+  <footer class="footer">
+    <span id="eat">Eat</span>
+    <span id="sleep">Sleep</span>
+    <span id="code">Code</span>
+    <span id="repeat">Repeat</span>
+  </footer>
 </body>
 </html>
