--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -93,7 +93,7 @@
     </div>
 
     <!-- Mobile Quick Actions Drawer (hidden on desktop) -->
-    <div id="mobileDrawer" class="modal drawer-modal hidden block md:hidden">
+    <div id="mobileDrawer" class="modal drawer-modal block md:hidden">
       <div class="drawer__content">
         <button class="modal__close" onclick="document.getElementById('mobileDrawer').classList.add('hidden')">&times;</button>
         <h2 class="modal__title card--tasks">Quick Actions</h2>
