Implement mobile button functionality for adding tasks, goals, and lessons in nav.js, goals.html, lessons.html, and tasks.html. The buttons now close the mobile drawer and open the respective popups, enhancing user experience and interaction consistency across the application.

--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -96,7 +96,7 @@
         <button class="modal__close" onclick="document.getElementById('mobileDrawer').classList.add('hidden')">&times;</button>
         <h2 class="modal__title card--goals">Quick Actions</h2>
         <ul class="drawer__links">
-          <li><button onclick="document.getElementById('goalPopup').classList.remove('hidden'); document.getElementById('mobileDrawer').classList.add('hidden')">Add Goal</button></li>
+          <li><button id="mobileAddGoalBtn">Add Goal</button></li>
         </ul>
       </div>
     </div>
