--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -98,7 +98,7 @@
         <button class="modal__close" onclick="document.getElementById('mobileDrawer').classList.add('hidden')">&times;</button>
         <h2 class="modal__title card--tasks">Quick Actions</h2>
         <ul class="drawer__links">
-          <li><button onclick="document.getElementById('taskPopup').classList.remove('hidden'); document.getElementById('mobileDrawer').classList.add('hidden')">Add Task</button></li>
+          <li><button id="mobileAddTaskBtn">Add Task</button></li>
         </ul>
       </div>
     </div>
