--- a/frontend/lessons.html
+++ b/frontend/lessons.html
@@ -104,7 +104,7 @@
         <button class="modal__close" onclick="document.getElementById('mobileDrawer').classList.add('hidden')">&times;</button>
         <h2 class="modal__title card--lessons">Quick Actions</h2>
         <ul class="drawer__links">
-          <li><button onclick="document.getElementById('lessonPopup').classList.remove('hidden'); document.getElementById('mobileDrawer').classList.add('hidden')">Add Lesson</button></li>
+          <li><button id="mobileAddLessonBtn">Add Lesson</button></li>
         </ul>
       </div>
     </div>
