--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="schedule.css">
+  <link rel="stylesheet" href="animations.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Schedule - Dashboard</title>
 </head>
