Implement mobile schedule list view in schedule.js and schedule.html, enhancing mobile responsiveness. Update schedule.css to style mobile elements, including event badges and day items, ensuring a cohesive user experience across devices.

--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -100,6 +100,11 @@
             <!-- JS will populate calendar days here -->
           </div>
         </div>
+
+        <!-- Mobile Schedule List (hidden on desktop) -->
+        <div id="mobile-schedule-list" class="mobile-schedule-list">
+          <!-- JS will populate mobile list here -->
+        </div>
       </div>
     </div>
 
