--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,7 +40,7 @@
         <div class="nav-right">
           <nav>
             <ul class="main-nav">
-              <li><a href="index.html">Dashboard</a></li>
+              <li><a href="index.html" class="dashboard-link">Dashboard</a></li>
               <li><a href="lessons.html">Lessons</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle">Daily ▾</a>
