Refactor dashboard link in multiple HTML files to include a specific class for improved styling consistency. This change enhances the visual integration of the dashboard link across the application.

--- a/frontend/tasks.html
+++ b/frontend/tasks.html
@@ -21,7 +21,7 @@
 
         <nav>
           <ul class="main-nav">
-            <li><a href="index.html">Dashboard</a></li>
+            <li><a href="index.html" class="dashboard-link">Dashboard</a></li>
             <li><a href="lessons.html">Lessons</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle">Daily ▾</a>
