--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -22,7 +22,7 @@
         
         <nav>
           <ul class="main-nav">
-            <li><a href="index.html">Dashboard</a></li>
+            <li><a href="index.html" class="dashboard-link">Dashboard</a></li>
             <li><a href="lessons.html">Lessons</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle">Daily ▾</a>
