--- a/frontend/notes.html
+++ b/frontend/notes.html
@@ -520,6 +520,38 @@
       </div>
     </div>
 
+    <!-- Create Notebook Modal -->
+    <div id="createNotebookModal" class="modal glass-modal hidden">
+      <div class="modal__content">
+        <button class="modal__close" onclick="document.getElementById('createNotebookModal').classList.add('hidden')">&times;</button>
+        <h2 class="modal__title card--notes">Create New Notebook</h2>
+        <form id="create-notebook-form" class="notebook-form">
+          <div class="form-group">
+            <label for="notebook-name">Notebook Name</label>
+            <input type="text" id="notebook-name" placeholder="Enter notebook name..." required>
+          </div>
+          <div class="form-group">
+            <label for="notebook-color">Color</label>
+            <div class="color-picker">
+              <input type="color" id="notebook-color" value="#9b59b6">
+              <div class="color-presets">
+                <button type="button" class="color-preset" data-color="#9b59b6" style="background: #9b59b6"></button>
+                <button type="button" class="color-preset" data-color="#e74c3c" style="background: #e74c3c"></button>
+                <button type="button" class="color-preset" data-color="#27ae60" style="background: #27ae60"></button>
+                <button type="button" class="color-preset" data-color="#3498db" style="background: #3498db"></button>
+                <button type="button" class="color-preset" data-color="#f39c12" style="background: #f39c12"></button>
+                <button type="button" class="color-preset" data-color="#8e44ad" style="background: #8e44ad"></button>
+              </div>
+            </div>
+          </div>
+          <div class="form-actions">
+            <button type="button" class="modal__cancel" onclick="document.getElementById('createNotebookModal').classList.add('hidden')">Cancel</button>
+            <button type="submit" class="modal__submit card--notes">Create Notebook</button>
+          </div>
+        </form>
+      </div>
+    </div>
+
     <!-- Tags Management Modal -->
     <div id="tagsModal" class="modal glass-modal hidden">
       <div class="modal__content">
