--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,10 @@
 
   <!-- Splash Screen -->
   <div id="splash-screen">
-    <img id="splash-img" src="splash.webp" alt="Splash animation" />
+    <video id="splash-video" autoplay muted playsinline>
+      <source src="screen.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
   </div>
 
   <div class="page-content">
@@ -35,7 +38,7 @@
       <div class="nav-container">
         <div class="nav-left">
           <div class="logo">OBIZU</div>
-          <h2 class="nav-quote">Get this shit done.</h2>
+          <img src="flag.png" alt="Flag" class="nav-flag" />
         </div>
         <div class="nav-right">
           <nav>
