Replace nav-quote with flag image across multiple HTML files for consistent navigation design

--- a/frontend/schedule.html
+++ b/frontend/schedule.html
@@ -17,7 +17,7 @@
       <div class="nav-container">
         <div class="nav-left">
           <div class="logo">OBIZU</div>
-          <h2 class="nav-quote">Get this shit done.</h2>
+          <img src="flag.png" alt="Flag" class="nav-flag" />
         </div>
         
         <nav>
