--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,10 +26,7 @@
 
   <!-- Splash Screen -->
   <div id="splash-screen">
-    <video id="splash-video" autoplay muted playsinline>
-      <source src="screen.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
+    <img id="splash-img" src="splash.webp" alt="Splash animation" />
   </div>
 
   <div class="page-content">
